Teste new composite API approach

--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/vue3-essential",
+      "plugin:vue/recommended",
       "eslint:recommended",
       "@vue/typescript/recommended",
       "@vue/prettier",
@@ -51,8 +51,7 @@
     ],
     "parserOptions": {
       "ecmaVersion": 2020
-    },
-    "rules": {}
+    }
   },
   "browserslist": [
     "> 1%",
