--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
       "node": true
     },
     "extends": [
-      "plugin:vue/recommended",
+      "plugin:vue3-recommended",
       "eslint:recommended",
       "@vue/typescript/recommended",
       "@vue/prettier",
