Added method drag functionality and some style features

--- a/package.json
+++ b/package.json
@@ -45,15 +45,16 @@
       "node": true
     },
     "extends": [
-      "plugin:vue3-recommended",
       "eslint:recommended",
       "@vue/typescript/recommended",
       "@vue/prettier",
-      "@vue/prettier/@typescript-eslint"
+      "@vue/prettier/@typescript-eslint",
+      "plugin:vue/vue3-essential"
     ],
     "parserOptions": {
       "ecmaVersion": 2020
-    }
+    },
+    "rules": {}
   },
   "browserslist": [
     "> 1%",
