--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,6 @@
     "src/**/*.vue",
     "tests/**/*.ts",
     "tests/**/*.tsx"
-  ],
+, "src/components/InputDialog.vue"  ],
   "exclude": ["node_modules"]
 }
