--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@types/sortablejs": "^1.10.6",
     "core-js": "^3.6.5",
+    "element-plus": "^1.0.2-beta.55",
     "sortablejs": "^1.10.2",
     "uuid": "^3.4.0",
     "vue": "^3.0.0",
@@ -33,6 +34,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^7.0.0",
     "autoprefixer": "^9.8.6",
+    "babel-plugin-import": "^1.13.3",
     "eslint": "^6.7.2",
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-vue": "^7.0.0",
