--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@quasar/extras": "^1.0.0",
     "@types/sortablejs": "^1.10.6",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "element-plus": "^1.0.2-beta.55",
+    "quasar": "^2.0.0",
     "sass": "^1.35.2",
     "sass-loader": "^10.1.1",
     "sortablejs": "^1.10.2",
@@ -43,8 +44,11 @@
     "eslint-plugin-vue": "^7.0.0",
     "postcss": "^7.0.35",
     "prettier": "^2.2.1",
+    "sass": "1.32.12",
+    "sass-loader": "^10.1.0",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4",
-    "typescript": "~4.1.5"
+    "typescript": "~4.1.5",
+    "vue-cli-plugin-quasar": "~4.0.1"
   },
   "eslintConfig": {
     "root": true,
