Removed axios and vuex in favor of vue-query

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,6 @@
     "@fortawesome/vue-fontawesome": "^3.0.0-4",
     "@quasar/extras": "^1.0.0",
     "@types/sortablejs": "^1.10.6",
-    "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
     "sass": "^1.35.2",
@@ -20,10 +19,9 @@
     "uuid": "^3.4.0",
     "vue": "^3.0.0",
     "vue-class-component": "^8.0.0-0",
+    "vue-query": "^1.8.3",
     "vue-router": "^4.0.0-0",
-    "vuedraggable": "^4.0.3",
-    "vuex": "^4.0.0-0",
-    "vuex-persistedstate": "^4.0.0"
+    "vuedraggable": "^4.0.3"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.0",
@@ -33,7 +31,6 @@
     "@vue/cli-plugin-eslint": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "@vue/compiler-sfc": "^3.0.0",
     "@vue/eslint-config-prettier": "^6.0.0",
